cmake_minimum_required(VERSION 3.17)
project(TrabajoFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabajoFinal main.cpp Headers/Test.h Headers/Cities.h FunctionsArgument/Statistics.h FunctionsArgument/DeadStatistics.h FunctionsArgument/AgeCases.h FunctionsArgument/CUICases.h FunctionsArgument/InfectedDead.h Sort/SortTest.h Sort/SortCity.h Headers/HashMap.h Headers/HashEntry.h Headers/Lista.h Headers/nodo.h Headers/ArbolBinario.h Headers/NodoArbol.h)
